@@ -1,3 +1,7 @@
+2004-10-27  Marcus Brinkmann  <marcus@gnu.org>
+
+	* l4/gnu/space.h (l4_fpage_xspan): New function.
+
 2004-10-23  Marcus Brinkmann  <marcus@gnu.org>
 
 	* l4/gnu/ipc.h (l4_ipc, l4_lipc): New functions.
